--- a/environment.yml
+++ b/environment.yml
@@ -118,16 +118,16 @@ dependencies:
   'ann=1.1.2=2'
 - !!python/unicode
   'boost=1.55.0=5'
-- !!python/unicode
-  'cplex-shared=0.1=9'
+#- !!python/unicode
+#  'cplex-shared=0.1=9'
 - !!python/unicode
   'dpct=1.2=py27_0_g0b54eb9'
 - !!python/unicode
   'fastfilters=0.2.4.post33=py27_0_gb899b16'
 - !!python/unicode
   'fftw=3.3.4=1'
-- !!python/unicode
-  'gurobi-symlink=0.1=3'
+#- !!python/unicode
+#  'gurobi-symlink=0.1=3'
 - !!python/unicode
   'hytra=1.1.4=py27_0_gcf40b58'
 - !!python/unicode
